--- a/app/views/static_page/about.html.erb
+++ b/app/views/static_page/about.html.erb
@@ -1,3 +1,3 @@
-<% yield provide :title, 'About Pages'%>
-<h1>StaticPage#about</h1>
-<p>Find me in app/views/static_page/about.html.erb</p>
+<div>
+  <h1>About</h1>
+</div>
