--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPage#home</h1>
-<p>Find me in app/views/static_page/home.html.erb</p>
+<div>
+  <h1>Home</h1>
+  <%= link_to "Sign up now!", '#' %>
+</div>
