--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,8 @@
   <div>
     <nav>
       <ul>
-        <li><%= link_to "Home", '#' %></li>
-        <li><%= link_to "Log in", '#' %></li>
+        <li><%= link_to "Home", home_path %></li>
+        <li><%= link_to "Log in", about_path %></li>
       </ul>
     </nav>
   </div>
